@@ -1,3 +1,8 @@
+20080611
+ - (djm) [channels.c configure.ac]
+   Do not set SO_REUSEADDR on wildcard X11 listeners (X11UseLocalhost=no)
+   bz#1464; ok dtucker 
+
 20080610
  - (dtucker) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2008/06/10 03:57:27
@@ -4154,4 +4159,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4966 2008/06/10 23:47:59 dtucker Exp $
+$Id: ChangeLog,v 1.4967 2008/06/11 20:05:12 djm Exp $
